#03 improved hive partition pruning